# D2_Calculation_API

./: .gitignore  Cargo.toml  MIT-LICENSE  README.md  build.rs  d2_calculation_api.d.ts  d2_calculation_api.pyi  data.json  inner_linest.py
.github/workflows/: foundry.yml  rust.yml
build_resources/: cached_build.ron  weapon_formulas.json  weapon_formulas_template.rs
database/: AmmoFormulas.json  TODO  compactor.py  enhanced_handler_template.rs  perk_rerouter.py  template.rs  test_weapon.json  weapon_formulas.json  weapon_formulas_editable.json  weapon_formulas_template.rs
output_definitions/: d2_calculation_api.pyi
src/: D2Enemy.rs  D2Enums.rs  D2Structs.rs  D2Weapon.rs  attributes.rs  attributes_old.rs  d2_enums.rs  js_types.rs  json.rs  lib.rs  logging.rs  main.rs  test.rs
src/abilities/: mod.rs
src/activity/: damage_calc.rs  mod.rs
src/attribute_framework/: attributes.rs  mod.rs  resource_pool.rs  status_effects.rs
src/database/: AmmoFormulas.json  weapon_formulas.json
src/dps/: dps_scheduler.rs  dps_simulation.rs  instruction_set.rs  js_dps_interface.rs  mod.rs
src/enemies/: mod.rs
src/mathUtil/: DpsCalc.rs  TtkCalc.rs  damage_calc.rs  dps_calc.rs  mod.rs  stat_calc.rs  ttk_calc.rs
src/perks/: buff_perks.rs  enhanced_handler.rs  exotic_armor.rs  exotic_perks.rs  lib.rs  meta_perks.rs  mod.rs  origin_perks.rs  other_perks.rs  perk_options_handler.rs  year_1_perks.rs  year_2_perks.rs  year_3_perks.rs  year_4_perks.rs  year_5_perks.rs  year_6_perks.rs
src/simulation/: timeline.rs
src/types/: js_types.rs  mod.rs  py_types.rs  rs_types.rs
src/weapons/: dps_calc.rs  mod.rs  reserve_calc.rs  stat_calc.rs  ttk_calc.rs  weapon_constructor.rs  weapon_formulas.rs
