[package]
name = "d2_calculation_api"
edition = "2021"
version = "0.3.0"
rust-version = "1.65"
repository = "https://github.com/oh-yes-0-fps/D2_Calculation_API"
build = "build.rs"

[features]
wasm = ["serde-wasm-bindgen", "wasm-bindgen", "console_error_panic_hook", "wee_alloc"]
python = ["pyo3", "pyo3-built"]

[build-dependencies]
built = { version = "0.6", features = ["git2", "chrono", "semver"] }

[dependencies]
serde = { version = "^1.0", features = ["derive"]}
built = { version = "0.6", features = ["chrono", "semver"] }

serde-wasm-bindgen = { version = "^0.4", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true}
wasm-bindgen = { version = "^0.2", optional = true}
wee_alloc = { version = "0.4.5", optional = true}

pyo3 = { version = "^0.18", features = ["extension-module"], optional = true}
pyo3-built = { version = "0.4", optional = true}


[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
